Working Image fetching and updated OpenAPI.yaml
